# scope-tracker-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  REQUIREMENTS.md  START_HERE.md  TASKS.md  pyproject.toml
docs/: architecture.md  configuration.md  user-guide.md
scope-tracker/: .gitignore  scope_tracker_config.json
scope-tracker/prompts/: conflict_resolve.md  prd_fetch_content.md
scope-tracker/scripts/: call_llm.py  conflict_manager.py  confluence_client.py  diff_prd.py  diff_slack.py  google_sheets.py  prd_parser.py  run_pipeline.py  sheet_manager.py  slack_client.py  update_state.py
src/scope_tracker/: __init__.py  cli.py  installer.py  runner.py
src/scope_tracker/prompts/: prd_extract.md  prd_fetch_meta.md  slack_classify.md  slack_fetch.md  slack_match.md  slack_report.md
src/scope_tracker/scripts/: __init__.py  call_llm.py  conflict_manager.py  dependency_manager.py  diff_prd.py  diff_slack.py  run_pipeline.py  sheet_manager.py  slack_client.py  slack_reporter.py  update_state.py
tests/: conftest.py  test_conflict_manager.py  test_confluence_client.py  test_dependency_manager.py  test_diff_prd.py  test_diff_slack.py  test_e2e.py  test_google_sheets.py  test_installer.py  test_prd_parser.py  test_run_pipeline.py  test_runner.py  test_sheet_manager.py  test_slack_client.py  test_slack_reporter.py  test_update_state.py
tests/fixtures/: mock_claude.sh  sample_config.json  sample_prd_features.json  sample_prd_raw.txt  sample_run_state.json  sample_slack_items.json
